K8s/ingress/services-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: services.info
      http:
        paths:
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8001
          - path: /products
            pathType: Prefix
            backend:
              service:
                name: product-service
                port:
                  number: 8000
